--- a/css/color.css
+++ b/css/color.css
@@ -32,3 +32,8 @@
 .blue-white .primary-color { color: #000000 }
 .blue-white .secondary-color { color: #8F8F8F }
 .blue-white .svg-fill { fill: #0065FF }
+
+
+.gray {
+    color: #666
+}
