--- a/css/main.css
+++ b/css/main.css
@@ -59,6 +59,11 @@
   line-height: 1.4;
   font-weight: normal;
 }
+.micro{
+  font-size: 8px;
+  font-weight: normal;
+  font-style: italic;
+}
 a {
   color: inherit;
   text-decoration: none;
@@ -212,7 +217,7 @@ img {
   outline: none;
   border: none;
   width: 100%;
-  padding: 15px;
+  padding: 5px;
 }
 .fill-white {
   fill: white;
@@ -502,4 +507,8 @@ img {
   min-height: 300px;
   width: 100%;
   background-size: cover;
+}
+
+.border-none{
+  border-width: 0;
 }
